[adicionado] numeros no relogio

--- a/Clock/clock.html
+++ b/Clock/clock.html
@@ -9,6 +9,18 @@
 </head>
 <body>
   <div class="relogio">
+    <h2 class="numeros doze">12</h2>
+    <h2 class="numeros tres">3</h2>
+    <h2 class="numeros seis">6</h2>
+    <h2 class="numeros nove">9</h2>
+    <h2 class="numeros um">1</h2>
+    <h2 class="numeros dois">2</h2>
+    <h2 class="numeros quatro">4</h2>
+    <h2 class="numeros cinco">5</h2>
+    <h2 class="numeros sete">7</h2>
+    <h2 class="numeros oito">8</h2>
+    <h2 class="numeros dez">10</h2>
+    <h2 class="numeros onze">11</h2>
     <div class="corpo-relogio">
       <div class="mao horas"></div>
       <div class="mao minutos"></div>
